--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prisma": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "sharp": "^0.32.5",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.0"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
