BLOG-008 docs, github action 방식 수정:

--- a/.github/main.yml
+++ b/.github/main.yml
@@ -8,6 +8,8 @@ on:
   # 여기서는 간단히 dev 브런치에서 push되면서 이 workflow가 실행 되도록 하겠습니다.
   push:
     branches: [main]
+  pull_request:
+    branched: [main]
 
   # 이부분은 위의 trigger가 없어도 수동으로 동작 할 수 있게끔 해주는 역할을 합니다.
   workflow_dispatch:
