--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # compiled output
-/dist
-/node_modules
+dist
+node_modules
+.pnpm-store
 
 .env
+.env.production
+.env.development
 
 # Logs
 logs
