docs : prisma generate 따로 나눔

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,11 @@ jobs:
       - name: Install dependencies
         run: | 
           pnpm install
+
+      - name: prisma generate
+        run: | 
           npx prisma generate
+          
 
       - name: Build production bundle
         run: pnpm build
