--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: prisma generate
         run: | 
-          npx prisma generate
+          pnpx prisma generate
           
 
       - name: Build production bundle
