--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,8 +55,8 @@ jobs:
 
       - name: prisma generate
         run: | 
-          pnpx prisma generate
-          
+          pnpm exec prisma generate
+          pnpm add ./prisma/prisma-client
 
       - name: Build production bundle
         run: pnpm build
