decs : prisma generate 순서 변경

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,10 +52,11 @@ jobs:
       - name: Install dependencies
         run: | 
           pnpm install
-          pnpm exec prisma generate
 
       - name: Build production bundle
-        run: pnpm build
+        run: |
+          pnpm build
+          pnpm exec prisma generate
 
       - name: Create .env file
         run: |
