docs : code deply after-install hook 추가

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,9 @@ jobs:
           mv dist deploy/dist
           mv package.json deploy
           mv appspec.yml deploy
+          mv after-install.sh deploy
           mv Dockerfile deploy
+          mv .env deploy
 
       - name: archive build
         run: |
