--- a/appspec.yml
+++ b/appspec.yml
@@ -5,3 +5,6 @@ files:
   - source: /
     destination: /home/ubuntu/blog-backend
     overwrite: yes
+hooks:
+  AfterInstall:
+    - location: ./after-install.sh
