github action yml 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,7 @@ jobs:
           mv package.json deploy
           mv appspec.yml deploy
           mv after-install.sh deploy
+          mv after-run-docker deploy
           mv Dockerfile deploy
           mv .env deploy
 
