--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
           mv package.json deploy
           mv appspec.yml deploy
           mv after-install.sh deploy
-          mv after-run-docker deploy
+          mv after-run-docker.sh deploy
           mv Dockerfile deploy
           mv .env deploy
 
