docs : dockerfile 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,6 +72,7 @@ jobs:
           mv appspec.yml deploy
           mv after-install.sh deploy
           mv Dockerfile deploy
+          mv prisma deploy
           mv .env deploy
 
       - name: archive build
