docs: github action 환경변수 확인

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,6 +66,7 @@ jobs:
 
       - name: directory
         run: |
+          cat .env
           mkdir deploy
           mv dist deploy/dist
           mv package.json deploy
