docs: github action 환경변수 확인

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
           mv prisma deploy
           mv .env deploy
           mv docker-entrypoint.sh deploy
-          
+          ls deploy
 
       - name: archive build
         run: |
