docs: github action 숨김파일 압축 포함

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,7 @@ jobs:
       - name: archive build
         run: |
           cd deploy
-          tar cvfz ./deploy.tar.gz ./.
+          tar cvfz ./deploy.tar.gz .
           ls -a
 
       - name: AWS configure credentials
