docs: github action 숨김파일 압축 포함

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
           aws-region: ap-northeast-2
 
       - name: upload to S3
-        run: aws s3 cp --region ap-northeast-2 ./deploy/deploy.tar.gz s3://chanoo-deploy/blog-backend/
+        run: aws s3 cp --region ap-northeast-2 ./deploy.tar.gz s3://chanoo-deploy/blog-backend/
 
       - name: deploy with AWS codeDeploy
         run: aws deploy create-deployment
