Update dependencies and configuration for improved functionality
- Updated Node.js version in docker-compose to 22-slim.
- Added database-related entries to .gitignore.
- Enhanced package.json with new Prisma commands and updated dependencies.
- Adjusted tsconfig.build.json to include generated files.
- Modified Prisma schema to switch from MySQL to SQLite and updated related migration files.
- Refactored AWS repository to use generated Prisma types.
- Updated folder and write repositories to utilize generated Prisma types.
- Improved error handling and logging across various services.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
-version: '3'
-  
-services: 
+version: "3"
 
+services:
   module:
-    image: node:18-slim
+    image: node:22-slim
     working_dir: /app
-    volumes: 
+    volumes:
       - .:/app
     env_file: ./.env
-    command: sh -c "apt-get update -y && apt-get install -y openssl && npm i -g pnpm && pnpm install --force && prisma generate"
-   
+    command: sh -c "apt-get update -y && apt-get install -y openssl && npm i -g pnpm && pnpm install --frozen-lockfile && pnpm exec prisma generate"
+
   server:
-    image: node:18-slim
+    image: node:22-slim
     working_dir: /app
-    volumes: 
+    volumes:
       - .:/app
     env_file: ./.env
     depends_on:
