Enhance Write model and processing
- Added `plainText` field to the Write model for storing markdown-removed content.
- Updated migration to include the new `plainText` column in the database.
- Implemented `PlainTextPipe` to automatically generate `plainText` from `content` during creation and update operations.
- Adjusted WriteController and WriteRepository to handle the new `plainText` field.
- Refactored WriteService methods for cleaner error handling.

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"joi": "^18.0.1",
 		"prisma": "^6.18.0",
 		"reflect-metadata": "^0.2.2",
+		"remove-markdown": "^0.6.2",
 		"rxjs": "^7.8.2",
 		"sharp": "^0.34.4",
 		"swagger-ui-express": "^5.0.1",
@@ -84,7 +85,8 @@
 	"pnpm": {
 		"supportedArchitectures": {
 			"os": [
-				"linux"
+				"linux",
+				"darwin"
 			],
 			"cpu": [
 				"x64",
