--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -68,47 +68,15 @@ jobs:
         run: |
           tar czf deploy.tar.gz deploy/
 
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.GCP_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.GCP_VM_IP }} >> ~/.ssh/known_hosts
-
-      - name: Copy files to VM
-        run: |
-          scp -i ~/.ssh/id_rsa deploy.tar.gz ${{ secrets.GCP_VM_USER }}@${{ secrets.GCP_VM_IP }}:/tmp/
-
-      - name: Deploy to VM
-        run: |
-          ssh -i ~/.ssh/id_rsa ${{ secrets.GCP_VM_USER }}@${{ secrets.GCP_VM_IP }} << 'EOF'
-            set -e
-            
-            PROJECT_DIR="/home/ubuntu/blog-backend"
-            
-            # 프로젝트 디렉토리 생성
-            mkdir -p $PROJECT_DIR
-            
-            # 기존 파일 백업 (선택사항)
-            if [ -d "$PROJECT_DIR" ] && [ "$(ls -A $PROJECT_DIR)" ]; then
-              echo "기존 파일 백업 중..."
-              cp -r $PROJECT_DIR ${PROJECT_DIR}.backup.$(date +%Y%m%d_%H%M%S) || true
-            fi
-            
-            # 배포 파일 압축 해제
-            cd $PROJECT_DIR
-            tar xzf /tmp/deploy.tar.gz -C .
-            mv deploy/* .
-            rm -rf deploy deploy.tar.gz
-            
-            # 배포 스크립트에 실행 권한 부여
-            chmod +x deploy-blue-green.sh
-            
-            # Blue-Green 무중단 배포 실행
-            ./deploy-blue-green.sh
-            
-            echo "배포 완료!"
-          EOF
+      - name: Copy changed files to server
+        uses: appleboy/scp-action@v1
+        with:
+          host: ${{ secrets.GCP_VM_IP }}
+          username: ${{ secrets.GCP_VM_USER }}
+          key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
+          port: 22
+          source: deploy.tar.gz
+          target: /home/${{ secrets.GCP_VM_USER }}/deploy.tar.gz
 
       - name: Cleanup
         if: always()
