--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -74,8 +74,9 @@ jobs:
           host: ${{ secrets.GCP_VM_IP }}
           username: ${{ secrets.GCP_VM_USER }}
           key: ${{ secrets.GCP_SSH_PRIVATE_KEY }}
+          password: ${{ secrets.GCP_SSH_PASSWORD }}
           port: 22
-          source: deploy.tar.gz
+          source: "deploy.tar.gz"
           target: /home/${{ secrets.GCP_VM_USER }}/deploy.tar.gz
 
       - name: Cleanup
