Refine GCP deployment workflow to improve tarball extraction process
- Updated the tar command to include verbose output during file extraction for better visibility.
- Ensured the deployment process remains efficient by maintaining cleanup steps.

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -88,7 +88,7 @@ jobs:
           script: |
             set -e
             cd /home/${{ secrets.GCP_VM_USER }}/blog-backend
-            tar xzf deploy.tar.gz -C .
+            tar -xzvf deploy.tar.gz
             mv deploy/* .
             rm -rf deploy deploy.tar.gz
             chmod +x deploy-blue-green.sh
