Update GCP deployment workflow to remove error handling for missing 'generated' folder during file copy

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -56,7 +56,7 @@ jobs:
           ls -la
           mkdir -p deploy
           cp -r dist deploy/
-          cp -r generated deploy/ || echo "generated 폴더 없음 (prisma generate 필요)"
+          cp -r generated deploy/
           cp package.json deploy/
           cp pnpm-lock.yaml deploy/
           cp Dockerfile deploy/
