--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Create deployment archive
         run: |
-          tar czf deploy.tar.gz deploy/
+          tar czf deploy.tar.gz deploy/*
 
       - name: Copy changed files to server
         uses: appleboy/scp-action@v1
