Update Dockerfile and GCP deployment workflow to streamline build process
- Added copying of `generated`, `dist`, and `prisma` directories to the Dockerfile for improved application structure.
- Modified Dockerfile to run `pnpm exec prisma migrate` instead of `deploy`, ensuring migrations are applied correctly.
- Enhanced GCP deployment workflow to include production build steps, ensuring the application is built before deployment.

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -36,6 +36,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
+      - name: Build production bundle
+        run: |
+          pnpm install --prod --frozen-lockfile
+          pnpm exec prisma generate
+          pnpm build
+
       - name: Create .env file
         run: |
           touch .env
@@ -47,10 +53,12 @@ jobs:
         run: |
           ls -la
           mkdir -p deploy
+          cp -r dist deploy/
+          cp -r generated deploy/
+          cp -r prisma deploy/
           cp package.json deploy/
           cp pnpm-lock.yaml deploy/
           cp Dockerfile deploy/
-          cp -r prisma deploy/
           cp -a .env deploy/.
           cp deploy-blue-green.sh deploy/
           cp nginx.conf.template deploy/ || true
