Update GCP deployment workflow to simplify production bundle build process
- Removed the `--prod` flag from the `pnpm install` command in the GCP deployment workflow to streamline the installation process while maintaining the frozen lockfile.

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Build production bundle
         run: |
-          pnpm install --prod --frozen-lockfile
+          pnpm install --frozen-lockfile
           pnpm exec prisma generate
           pnpm build
 
