Update GCP deployment workflow to exclude GCP-specific secrets from .env file creation
- Modified the .env file generation step to filter out secrets that start with "GCP", ensuring only relevant environment variables are included for deployment.

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -45,7 +45,10 @@ jobs:
       - name: Create .env file
         run: |
           touch .env
-          jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' <<< "$SECRETS_CONTEXT" > .env
+          jq -r 'to_entries
+            | map(select(.key | startswith("GCP") | not))
+            | map("\(.key)=\(.value|tostring)")
+            | .[]' <<< "$SECRETS_CONTEXT" > .env
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
 
