--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -1,16 +1,17 @@
-upstream blog_backend {
-    server localhost:4000;  # 기본값: Blue 환경
+# /etc/nginx/sites-available/backend
+upstream backend {
+    server localhost:4000;  # Blue 환경 (초기 활성)
     # server localhost:4001;  # Green 환경으로 전환 시 주석 해제
 }
 
 server {
-    listen 80;
+    listen 4000;
     server_name _;
 
     client_max_body_size 100M;
 
     location / {
-        proxy_pass http://blog_backend;
+        proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -19,18 +20,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # 타임아웃 설정
+
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
-
-    # 헬스 체크 엔드포인트 (선택사항)
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
 }
-
